# HierarchySimulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
assets/scenarios/: default.scenario
include/hiersim/: Coalition.h  Commodity.h  Config.h  Culture.h  Dashboard.h  EconomicModel.h  EventManager.h  Facility.h  HierarchyView.h  Ideology.h  Individual.h  Law.h  Location.h  Logger.h  MainWindow.h  Market.h  ObjectInspector.h  Organization.h  Policy.h  PoliticsModule.h  Random.h  Scenario.h  ScenarioManager.h  Serializer.h  Shaders.h  Simulation.h  SimulationController.h  SimulationEngine.h  SolarSystem.h  StringUtils.h  Technology.h  TimeController.h  TimeSystem.h  Unit.h  VulkanContext.h  VulkanRenderer.h  WorldGenerator.h  WorldMap.h
include/hiersim/ui/: EntityInspector.h  LogPanel.h  MainWindow.h  MapView.h  TimeControlWidget.h
src/: main.cpp
src/core/: Config.cpp  EventManager.cpp  Logger.cpp  Simulation.cpp  SimulationEngine.cpp  TimeController.cpp  TimeSystem.cpp
src/culture/: Culture.cpp
src/economy/: Commodity.cpp  EconomicModel.cpp  Market.cpp
src/graphics/: Shaders.cpp  VulkanContext.cpp  VulkanRenderer.cpp
src/integration/: SimulationController.cpp
src/law/: Law.cpp
src/objects/: Facility.cpp  Individual.cpp  Organization.cpp  Unit.cpp
src/politics/: Coalition.cpp  Ideology.cpp  Policy.cpp  PoliticsModule.cpp
src/space/: SolarSystem.cpp
src/technology/: Technology.cpp
src/ui/: Dashboard.cpp  EntityInspector.cpp  HierarchyView.cpp  LogPanel.cpp  MainWindow.cpp  MapView.cpp  ObjectInspector.cpp  TimeControlWidget.cpp
src/utils/: Random.cpp  Serializer.cpp  StringUtils.cpp
src/world/: Location.cpp  Scenario.cpp  ScenarioManager.cpp  WorldGenerator.cpp  WorldMap.cpp
tests/unit/: test_Facility.cpp  test_Individual.cpp  test_Organization.cpp  test_Unit.cpp
